# camera_localization

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: macos-dep-src.yml  ubuntu-dep-src.yml
doc/: Doxyfile.cmake  mainpage.doc.cmake  references.bib  tutorial-homography-opencv.doc  tutorial-homography-visp.doc  tutorial-homography.doc  tutorial-pose-dementhon-opencv.doc  tutorial-pose-dementhon-visp.doc  tutorial-pose-dementhon.doc  tutorial-pose-dlt-opencv.doc  tutorial-pose-dlt-planar-opencv.doc  tutorial-pose-dlt-planar-visp.doc  tutorial-pose-dlt-planar.doc  tutorial-pose-dlt-visp.doc  tutorial-pose-dlt.doc  tutorial-pose-gauss-newton-opencv.doc  tutorial-pose-gauss-newton-visp.doc  tutorial-pose-gauss-newton.doc  tutorial-pose-mbt-visp.doc  tutorial-pose-mbt.doc  tutorial-template-matching-visp.doc  tutorial-template-matching.doc
homography-basis/: CMakeLists.txt  homography-dlt.cpp  pose-from-homography-dlt.cpp
opencv/: CMakeLists.txt
opencv/homography-basis/: CMakeLists.txt  homography-dlt-opencv.cpp  pose-from-homography-dlt-opencv.cpp
opencv/pose-basis/: CMakeLists.txt  pose-dementhon-opencv.cpp  pose-dlt-opencv.cpp  pose-gauss-newton-opencv.cpp
pose-basis/: CMakeLists.txt  pose-dementhon.cpp  pose-dlt.cpp  pose-gauss-newton.cpp
pose-mbt/: CMakeLists.txt  pose-mbt.cpp
template-matching/: CMakeLists.txt  template-matching.cpp
visp/: CMakeLists.txt
visp/homography-basis/: CMakeLists.txt  homography-dlt-visp.cpp  pose-from-homography-dlt-visp.cpp
visp/pose-basis/: CMakeLists.txt  pose-dementhon-visp.cpp  pose-dlt-visp.cpp  pose-gauss-newton-visp.cpp
visp/pose-mbt/: CMakeLists.txt  pose-mbt-visp.cpp
visp/template-matching/: CMakeLists.txt  template-matching-visp.cpp
